tests/invalid/parse/manual_ex020.pts
function main() : void {
    var x; // Erreur : E1001 PARSE_UNEXPECTED_TOKEN (var sans initialiseur)
}
